plex/transmission/deployment.yaml
kind: Deployment
apiVersion: apps/v1
metadata:
  name: transmission
  labels:
    app: plex
spec:
  selector:
    matchLabels:
      name: transmission
  template:
    metadata:
      labels:
        name: transmission
    spec:
      volumes:
        - name: wg-conf
          secret:
            secretName: vpn-wg-conf
        - name: data
          persistentVolumeClaim:
            claimName: plex-pvc
      containers:
        - name: vpn
          securityContext:
            capabilities:
              add:
                - NET_ADMIN
                - SYS_MODULE
            privileged: true
          image: ghcr.io/k8s-at-home/wireguard
          volumeMounts:
            - mountPath: /etc/wireguard/wg0.conf
              name: wg-conf
              subPath: conf
        - name: transmission
          image: ghcr.io/k8s-at-home/transmission
          securityContext:
            runAsUser: 1000
            runAsGroup: 1000
            runAsNonRoot: true
          ports:
            - containerPort: 9091
          volumeMounts:
            - mountPath: /config
              name: data
              subPath: transmission/config
            - mountPath: /downloads
              name: data
              subPath: transmission/downloads
