plex/transmission/service.yaml
kind: Service
apiVersion: v1
metadata:
  name: transmission
spec:
  ports:
    - name: http
      port: 80
      protocol: TCP
      targetPort: 9091
  selector:
    name: transmission
